shifted image row to left 70px

--- a/starterhacks/startbootstrap-freelancer-gh-pages/css/assets.css
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/css/assets.css
@@ -37,3 +37,11 @@
    top: -70px;
    left:-160px;
 }
+.row_pad{
+
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: 70px;
+
+}
